[update]customer farmer view layout

--- a/app/javascript/stylesheets/job_offers.scss
+++ b/app/javascript/stylesheets/job_offers.scss
@@ -11,3 +11,13 @@
     border-bottom: solid 5px #5989cf;
 }
 
+.box9 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #2c2c2f;
+    background: #cde4ff;/*背景色*/
+}
+.box9 p {
+    margin: 0;
+    padding: 0;
+}
