--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,110 +1,112 @@
 <p id="notice"></p>
 <div class="container">
   <div class="row">
-    <div class="col-md-7 offset-1">
+    <div class="col-md-8 offset-2 text-center">
+      <div class="box1">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "customer/shared/error_messages", resource: resource %>
-      <h2>新規会員登録</h2>
+        <h2>新規会員登録</h2>
+      </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :名前 %>
     </div>
-    <div class="col-md-1 py-1">
+    <div class="col-md-1 py-2">
       （姓）
     </div>
-    <div class="col-md-3 py-1">
+    <div class="col-md-3 py-2">
       <%= f.text_field :first_name, class:"w-75" %>
     </div>
-     <div class="col-md-1 py-1">
+     <div class="col-md-1 py-2">
       （名）
     </div>
-    <div class="col-md-3 py-1">
+    <div class="col-md-3 py-2">
       <%= f.text_field :last_name, class:"w-75" %>
     </div>
 
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :フリガナ %>
     </div>
-    <div class="col-md-1 py-1">
+    <div class="col-md-1 py-2">
       （セイ）
     </div>
-    <div class="col-md-3 py-1">
+    <div class="col-md-3 py-2">
       <%= f.text_field :first_name_kana, class:"w-75" %>
     </div>
-    <div class="col-md-1 py-1">
+    <div class="col-md-1 py-2">
     （メイ）
     </div>
-    <div class="col-md-3 py-1">
+    <div class="col-md-3 py-2">
       <%= f.text_field :last_name_kana, class:"w-75" %>
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :メールアドレス %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"w-40" %>
+    <div class="col-md-7 py-2 offset-1">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"w-75" %>
     </div>
 
-     <div class="col-md-2 py-1 offset-1">
+     <div class="col-md-3 py-2 offset-1">
       <%= f.label :パスワード（６文字以上） %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
+    <div class="col-md-7 py-2 offset-1">
       <% if @minimum_password_length %>
       <% end %>
       <%= f.password_field :password, autocomplete: "new-password", class:"w-75" %>
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :パスワード（確認用） %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
+    <div class="col-md-7 py-2 offset-1">
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"w-75" %>
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :性別 %>
     </div>
-    <div class="col-md-3 py-1 offset-1">
-      
+    <div class="col-md-2 py-2 offset-1">
+
           <%= f.radio_button :gender, Customer.genders.key(0) %>
           <%= f.label :gender, Customer.genders_i18n[:man] %>
     </div>
-    <div class="col-md-3 py-1">
+    <div class="col-md-2 py-2">
           <%= f.radio_button :gender, Customer.genders.key(1) %>
           <%= f.label :gender, Customer.genders_i18n[:woman] %>
-      
+
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :年齢 %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
+    <div class="col-md-7 py-2 offset-1">
       <%= f.text_field :age %> 歳
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :郵便番号（ハイフンなし） %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
+    <div class="col-md-7 py-2 offset-1">
       <%= f.text_field :postal_code, class:"w-75" %>
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :住所 %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
+    <div class="col-md-7 py-2 offset-1">
       <%= f.text_field :address, class:"w-75" %>
     </div>
 
-    <div class="col-md-2 py-1 offset-1">
+    <div class="col-md-3 py-2 offset-1">
       <%= f.label :電話番号 %>
     </div>
-    <div class="col-md-8 py-1 offset-1">
+    <div class="col-md-7 py-2 offset-1">
       <%= f.text_field :telephone_number, class:"w-75" %>
     </div>
 
@@ -115,6 +117,8 @@
     </div>
 <% end %>
 </div>
+
+<p></p>
 
 <div class="row">
   <div class="col-md-7 offset-1">
