--- a/app/views/farmer/job_offers/edit.html.erb
+++ b/app/views/farmer/job_offers/edit.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"></p>
 <div class="container">
   <div class="row">
-    <div class="col-md-7 offset-3">
-      <h1>求人編集ページ</h1>
-    </div>
+      <div class="col-md-8 offset-2 text-center">
+        <div class="box1">
+          <h2>求人編集ページ</h2>
+        </div>
+      </div>
   </div>
 
    <%= form_with model: @job_offer, url: farmer_job_offer_path(@job_offer.id) do |f| %>
