--- a/app/javascript/stylesheets/customers.scss
+++ b/app/javascript/stylesheets/customers.scss
@@ -1,25 +1,31 @@
 // Place all the styles related to the customer/customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.box5{
-    padding: 8px 19px;
-    margin: 2em 0;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 3px #5989cf;
-    border-bottom: solid 3px #5989cf;
+.box2 {
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  180px;       /* ※縦横を同値に */
+    height: 180px;       /* ※縦横を同値に */
 }
 
+
 .box6{
-    padding: 8px 19px;
-    margin: 2em 0;
-    border-bottom: solid 3px #5989cf;
+    padding: 2em 2em;
+    margin: 2em 2em;
+    color: #000000;
+    background: #fff;
+    border-bottom: solid 6px #808080;
+    border-radius: 9px;
+}
+.box6 p {
+    margin: 0;
+    padding: 0;
 }
 
 .search_form{
     padding: 8px 19px;
     margin: 2em 0;
     background: #EEEEEE;
-    border: solid 3px #5989cf;
-    border-radius: 50px;
+    border: solid 2px #5989cf;
+    border-radius: 750px;
 }
+
