--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -5,10 +5,12 @@
     <p></p>
 
     <div class="row">
-      <div class="col-md-4 offset-2">
-        <h2 class="p-2 border border-info border-start-0 rounded-5 text-center">利用者マイページ情報</h2>
+      <div class="col-md-5 offset-2 text-center">
+        <div class="box1">
+          <h2>利用者マイページ情報</h2>
+        </div>
       </div>
-      <div class="col-md-4 offset-2">
+      <div class="col-md-3 offset-2 align-self-center">
       <%= link_to '編集する', customers_mypage_edit_path(@customer), class: "btn btn-success btn-lg" %>
       </div>
     </div>
@@ -17,11 +19,13 @@
 
     <div class="row">
       <div class="col-md-4 offset-1">
-        <%= image_tag @customer.get_customers_image,size: "300x300" %>
+        <div class="box2">
+          <%= image_tag @customer.get_customers_image,size: "300x300" %>
+        </div>
       </div>
 
       <div class="col-md-6">
-        <table class="table table-bordered table-hover" >
+        <table class="table table-bordered table-hover table-light" >
           <tr><th class="table-active">利用者名</th><td><%= @customer.first_name %><%= @customer.last_name %></td></tr>
           <tr><th class="table-active">フリガナ</th><td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td></tr>
           <tr><th class="table-active">メールアドレス</th><td><%= @customer.email %></td></tr>
