--- a/app/views/farmer/farmers/show.html.erb
+++ b/app/views/farmer/farmers/show.html.erb
@@ -5,10 +5,12 @@
     <p></p>
 
     <div class="row">
-      <div class="col-md-4 offset-2">
-        <h2 class="p-2 border border-info border-start-0 rounded-5 text-center">生産者マイページ</h2>
+      <div class="col-md-5 offset-2 text-center">
+        <div class="box1">
+          <h2>生産者マイページ</h2>
+        </div>
       </div>
-      <div class="col-md-4 offset-2">
+      <div class="col-md-2 offset-2">
       <%= link_to '編集する', farmer_farmers_mypage_edit_path(@farmer), class: "btn btn-success btn-lg" %>
       </div>
     </div>
