--- a/app/views/farmer/job_offers/new.html.erb
+++ b/app/views/farmer/job_offers/new.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"></p>
 <div class="container">
   <div class="row">
-    <div class="col-md-7 offset-3">
-      <h1>求人登録</h1>
-    </div>
+      <div class="col-md-8 offset-2 text-center">
+        <div class="box1">
+          <h2>求人登録</h2>
+        </div>
+      </div>
   </div>
 
    <%= form_with model: @job_offer, url: farmer_job_offers_path do |f| %>
@@ -106,10 +108,10 @@
       </div>
 
      <div class="col text-center">
-      <%= f.submit '新規登録', class: "btn btn-success" %>
+      <%= f.submit '新規登録', class: "btn btn-success btn-lg" %>
      </div>
     </div>
   <% end %>
-
+<p></p>
 
 </div>
