--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -10,14 +10,19 @@
 
     <div class="row">
         <div class="col-md-6">
+          <div class="box6">
           <div class="text-center">
-            <div class="box10">
-            <h1>働き手の方はこちら</h1>
+
+            <h2>働き手の方はこちら</h2>
             <p></p>
-            <%= link_to new_customer_session_path, class: "btn btn-outline-primary btn-block md-2" do %>
+            <div>
+            <%= link_to new_customer_session_path, class: "btn btn-outline-primary btn-block md-1" do %>
               ログイン<i class="fas fa-sign-in-alt"></i>
             <% end %>
+            </div>
+
               <p></p>
+
             <%= link_to new_customer_registration_path, class: "btn btn-outline-success btn-block md-2" do %>
               新規登録<i class="fas fa-plus"></i>
             <% end %>
