--- a/app/views/customer/customer_reviews/new.html.erb
+++ b/app/views/customer/customer_reviews/new.html.erb
@@ -4,8 +4,10 @@
     <p></p>
 
     <div class="row">
-      <div class="col-md-12 text-center">
-        <h2 class="p-2 border border-info border-start-0 rounded-5 text-center">レビューページ</h2>
+      <div class="col-md-8 offset-md-2 text-center">
+        <div class="box1">
+          <h2>利用者レビューページ</h2>
+        </div>
       </div>
     </div>
 
