--- a/app/views/farmer/farmers/edit.html.erb
+++ b/app/views/farmer/farmers/edit.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"></p>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 offset-2">
-        <h1>生産者マイページ編集</h1>
+      <div class="col-md-8 offset-2 text-center">
+        <div class="box1">
+          <h2>生産者マイページ編集</h2>
+        </div>
       </div>
     </div>
 
