--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -38,6 +38,12 @@ main {
     padding: 0;
 }
 
+.box2 {
+    border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
+    width:  180px;       /* ※縦横を同値に */
+    height: 180px;       /* ※縦横を同値に */
+}
+
 .box3 {
     position: relative;
     margin: 2em 0;
