--- a/app/views/farmer/farmer_reviews/new.html.erb
+++ b/app/views/farmer/farmer_reviews/new.html.erb
@@ -8,19 +8,22 @@
       </div>
     </div>
 
-　　<div class="row">
-      <div class="col-md-4 text-center">
+　　<div class="row align-items-center">
+      <div class="col-md-4 offset-1 text-center">
         <%= image_tag @customer.get_customers_image,size: "300x300" %>
-
         <p></p>
+        <table class="table table-bordered table-hover table-light" >
+          <tr><th class="table-active">氏名</th><td><%= @customer.first_name %><%= @customer.last_name %></td></tr>
+          <tr><th class="table-active">フリガナ</th><td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td></tr>
+        </table>
+      </div>
 
-        <table class="table table-bordered" >
-          <tr>
-            <th class="table-active">氏名</th><td><%= @customer.first_name %><%= @customer.last_name %></td>
-          </tr>
-          <tr>
-            <th class="table-active">フリガナ</th><td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td>
-          </tr>
+      <div class="col-md-5 offset-1">
+        <table  class="table table-bordered table-hover table-light" >
+          <tr><th class="table-active">メールアドレス</th><td><%= @customer.email %></td></tr>
+          <tr><th class="table-active">性別</th><td><%= @customer.gender_i18n %></td></tr>
+          <tr><th class="table-active">年齢</th><td><%= @customer.age %>歳</td></tr>
+          <tr><th class="table-active">電話番号</th><td><%= @customer.telephone_number %></td></tr>
         </table>
       </div>
     </div>
@@ -29,6 +32,7 @@
     <p></p>
 
       <%= form_with model: @farmer_review, url: farmer_job_offer_farmer_reviews_path, method: :post do |f| %>
+        <%= f.hidden_field :customer_id, :value => @customer.id %>
 
       <!--<div class="col-md-4 offset-3">-->
         <div class="form-group" id="farmer_star">
