--- a/app/views/farmer/customer_reviews/index.html.erb
+++ b/app/views/farmer/customer_reviews/index.html.erb
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
         <div class="box1">
-          <h2>レビュー一覧ページ</h2>
+          <h2>生産者レビュー一覧ページ</h2>
         </div>
       </div>
     </div>
@@ -40,8 +40,10 @@
       <% customer_reviews.each do |customer_review| %>
         <%#= customer_review.inspect %>
         <div class= "row border rounded border-2 p-5 align-items-center bg-light mt-3">
+          <div class="box2">
           <div class="col-md-3">
             <%= image_tag customer_review.customer.get_customers_image,size: "150x150" %>
+          </div>
           </div>
         <div class="col-md-2">
           氏名：<%=customer_review.customer.first_name %><%=customer_review.customer.last_name %>
