[update]customer farmer view layout

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -85,9 +85,9 @@ main {
 .box5 {
     padding: 0.5em 1em;
     margin: 2em 0;
-    color: #00BCD4;
+    color: #33CC33;
     background: #CCFFCC;/*背景色*/
-    border-top: solid 6px #1dc1d6;
+    border-top: solid 6px #33CC33;
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);/*影*/
 }
 .box5 p {
