--- a/app/views/admin/farmers/index.html.erb
+++ b/app/views/admin/farmers/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Admin::Farmers#index</h1>
-<p>Find me in app/views/admin/farmers/index.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-2 text-center">
+        <div class="box1">
+          <h2>生産者一覧</h2>
+        </div>
+      </div>
+    </div>
+     <table class="table">
+          <thead>
+            <tr>
+              <th>生産者ID</th>
+              <th>生産者画像</th>
+              <th>名前</th>
+              <th>電話番号</th>
+              <th>メールアドレス</th>
+
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @farmers.each do |farmer| %>
+            <tr>
+              <td><%= farmer.id %></td>
+              <td><%= image_tag farmer.get_farmers_image,size: "70x70" %></td>
+              <td><%= farmer.name %></td>
+              <td><%= farmer.telephone_number %></td>
+              <td><%= farmer.email %></td>
+
+
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+
+
+
+</div>
