--- a/app/views/customer/job_offers/search.html.erb
+++ b/app/views/customer/job_offers/search.html.erb
@@ -23,7 +23,7 @@
     <% @job_offers.each do |job_offer| %>
     <div class= "row border rounded-pill border-2 p-5 align-items-center bg-light mt-3">
       <div class="col-md-3">
-        <%= image_tag job_offer.farmer.get_farmers_image,size: "150x150" %>
+        <%= image_tag job_offer.farmer.get_farmers_image,size: "150x150", class:"box2" %>
       </div>
       <div class="col-md-3" >
         生産者名：<%= job_offer.farmer.name %><br>
@@ -49,4 +49,5 @@
 
     </div>
     <% end %>
+    <p></p>
   </div>
