--- a/app/views/admin/farmer_reviews/index.html.erb
+++ b/app/views/admin/farmer_reviews/index.html.erb
@@ -1,2 +1,53 @@
-<h1>Admin::FarmerReviews#index</h1>
-<p>Find me in app/views/admin/farmer_reviews/index.html.erb</p>
+<p id="notice"></p>
+  <div class="container">
+
+    <p></p>
+
+    <div class="row">
+      <div class="col-md-8 offset-md-2 text-center">
+        <div class="box1">
+          <h2>生産者レビュー管理</h2>
+        </div>
+      </div>
+    </div>
+
+      <% @farmer_reviews.each do |farmer_review| %>
+        <%#= customer_review.inspect %>
+        <div class= "row border rounded border-2 p-5 align-items-center bg-light mt-3">
+          <div class="box2">
+          <div class="col-md-3">
+            <%= image_tag farmer_review.job_offer.farmer.get_farmers_image,size: "150x150" %>
+          </div>
+          </div>
+        <div class="col-md-2">
+          氏名：<%=farmer_review.job_offer.farmer.name %>
+        <p></p>
+          利用者：<%=farmer_review.customer.first_name %>
+        <p></p>
+          メールアドレス：<%=farmer_review.customer.email %>
+        </div>
+
+        <div class="col-md-3" id="farmer_star_<%= farmer_review.id %>" >
+          <%= farmer_review.farmer_star %>
+        </div>
+        <div class="col-md-4">
+          コメント：<%=farmer_review.farmer_comment %>
+        </div>
+      </div>
+
+        <script>
+          var elem = document.getElementById('farmer_star_<%= farmer_review.id %>')
+          var opt = {
+                      score: <%= farmer_review.farmer_star %>,
+                      starOff:  '<%= asset_path('star-off.png') %>',
+                      starOn : '<%= asset_path('star-on.png') %>',
+                      starHalf: '<%= asset_path('star-half.png') %>',
+                      half: true,
+                      size     : 36,
+                      readOnly: true,
+          };
+          raty(elem,opt)
+        </script>
+
+      <% end %>
+  </div>
