--- a/app/views/farmer/customer_reviews/index.html.erb
+++ b/app/views/farmer/customer_reviews/index.html.erb
@@ -39,13 +39,13 @@
     <% if customer_reviews.any? %>
       <% customer_reviews.each do |customer_review| %>
         <%#= customer_review.inspect %>
-        <div class= "row border rounded border-2 p-5 align-items-center bg-light mt-3">
+        <div class= "row border rounded-pill border-2 p-5 align-items-center bg-light mt-3">
           <div class="box2">
-          <div class="col-md-3">
-            <%= image_tag customer_review.customer.get_customers_image,size: "150x150" %>
+          <div class="col-md-2">
+            <%= image_tag customer_review.customer.get_customers_image,size: "150x150", class:"box2" %>
           </div>
           </div>
-        <div class="col-md-2">
+        <div class="col-md-2 offset-1">
           氏名：<%=customer_review.customer.first_name %><%=customer_review.customer.last_name %>
         <p></p>
           年齢：<%=customer_review.customer.age %>
@@ -53,7 +53,7 @@
         <div class="col-md-3" id="customer_star_<%= customer_review.id %>" >
           <%= customer_review.customer_star %>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           コメント：<%=customer_review.customer_comment %>
         </div>
       </div>
