--- a/app/views/farmer/job_offers/index.html.erb
+++ b/app/views/farmer/job_offers/index.html.erb
@@ -19,10 +19,10 @@
     <% @job_offers.each do |job_offer| %>
     <div class= "row border rounded-pill border-2 p-5 align-items-center bg-light mt-3">
       <div class="col-md-2">
-        <%= image_tag @farmer.get_farmers_image,size: "150x150" %>
+        <%= image_tag @farmer.get_farmers_image,size: "150x150", class:"box2" %>
       </div>
 
-      <div class="col-md-3" >
+      <div class="col-md-3 offset-1" >
         作業名：<%= job_offer.job_name %><br>
         <p></p>
         日付：<%= l job_offer.day,format: :long %><br>
