--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -12,15 +12,15 @@
       <div class="col-md-6">
         <div class="box4">
           <div class="text-center">
-            <h2>働き手の方はこちら</h2>
+            <h1>働き手の方はこちら</h1>
             <p></p>
-            <%= link_to new_customer_session_path, class: "btn btn-outline-primary btn-block md-1" do %>
+            <%= link_to new_customer_session_path, class: "btn btn-outline-primary btn-block mt-5" do %>
               ログイン<i class="fas fa-sign-in-alt"></i>
             <% end %>
 
               <p></p>
 
-            <%= link_to new_customer_registration_path, class: "btn btn-outline-success btn-block md-2" do %>
+            <%= link_to new_customer_registration_path, class: "btn btn-outline-success btn-block mt-5" do %>
               新規登録<i class="fas fa-plus"></i>
             <% end %>
         　  </div>
@@ -32,16 +32,17 @@
           <div class="text-center">
             <h1>生産者の方はこちら</h1>
             <p></p>
-              <%= link_to new_farmer_session_path, class: "btn btn-outline-primary btn-block md-2" do %>
+              <%= link_to new_farmer_session_path, class: "btn btn-outline-primary btn-block mt-5" do %>
                 ログイン<i class="fas fa-sign-in-alt"></i>
               <% end %>
 
             <p></p>
 
-              <%= link_to new_farmer_registration_path, class: "btn btn-outline-success btn-block md-2" do %>
+              <%= link_to new_farmer_registration_path, class: "btn btn-outline-success btn-block mt-5" do %>
                 新規登録<i class="fas fa-plus"></i>
               <% end %>
           </div>
         </div>
       </div>
     </div>
+  </div>
